--- a/FLDataParser.vcxproj.filters
+++ b/FLDataParser.vcxproj.filters
@@ -9,6 +9,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Source\Structures">
+      <UniqueIdentifier>{3d7c508d-168b-4530-85dd-39fd6021960f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="vcpkg.json" />
@@ -17,9 +20,27 @@
     <ClCompile Include="Source\DllMain.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Source\IniReader.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Structures\FreelancerIni.cpp">
+      <Filter>Source\Structures</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Inih.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Includes\PCH.hpp">
+      <Filter>Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\IniReader.hpp">
+      <Filter>Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Structures\FreelancerIni.hpp">
+      <Filter>Includes</Filter>
+    </ClInclude>
+    <ClInclude Include="Includes\Inih.hpp">
       <Filter>Includes</Filter>
     </ClInclude>
   </ItemGroup>
